# dumE-2020

./: README.md
interbotix_descriptions/urdf/: custom.urdf.xacro
interbotix_gazebo/launch/: gazebo.launch
kinect_robo/: CMakeLists.txt  package.xml
kinect_robo/kinect_robo/launch/: plots.launch  rviz_launch.launch  spawn_arm.launch  spawn_camera.launch
kinect_robo/kinect_robo/models/kinect_camera/: model.sdf
kinect_robo/kinect_robo/src/: get_angles.py  joint_tracker.py  joint_tracker3D.py  move_arm.py  move_arm_copy.py  test.py  test_kf.py
kinect_robo/launch/: default.launch
kinect_robo/models/kinect_camera/: model.config  model.sdf
kinect_robo/msg/: ArmPose.msg
kinect_robo/rviz/: default.rviz
kinect_robo/src/: get_angles.py  joint_tracker.py  joint_tracker3D.py  kalman.py  move_arm.py  test_kf.py
